--- a/charts/argo-cd/templates/argocd-repo-server/networkpolicy.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/networkpolicy.yaml
@@ -25,14 +25,12 @@ spec:
           {{- include "argo-cd.selectorLabels" (dict "context" . "name" .Values.applicationSet.name) | nindent 10 }}
     {{- end }}
     ports:
-    - port: repo-server
+    - port: server
       protocol: TCP
-  {{- if .Values.repoServer.metrics.enabled }}
   - from:
     - namespaceSelector: {}
     ports:
     - port: metrics
-  {{- end }}
   podSelector:
     matchLabels:
       {{- include "argo-cd.selectorLabels" (dict "context" . "name" .Values.repoServer.name) | nindent 6 }}
