--- a/charts/argo-cd/templates/redis/networkpolicy.yaml
+++ b/charts/argo-cd/templates/redis/networkpolicy.yaml
@@ -21,16 +21,16 @@ spec:
     ports:
     - port: redis
       protocol: TCP
-  {{- if .Values.redis.metrics.enabled }}
+  {{- if .Values.redis.exporter.enabled }}
   - from:
     - namespaceSelector: {}
     ports:
     - port: metrics
       protocol: TCP
-  {{- end }}
   podSelector:
     matchLabels:
       {{- include "argo-cd.selectorLabels" (dict "context" . "name" .Values.redis.name) | nindent 6 }}
   policyTypes:
   - Ingress
+  {{- end }}
 {{- end }}
