--- a/charts/argo-cd/templates/argocd-repo-server/clusterrolebinding.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/clusterrolebinding.yaml
@@ -1,14 +1,14 @@
-{{- if .Values.repoServer.rbac.create }}
+{{- if .Values.rbac.clusterAdmin }}
 apiVersion: rbac.authorization.k8s.io/v1
-kind: {{ ternary "ClusterRoleBinding" "RoleBinding" .Values.rbac.clusterAdmin }}
+kind: ClusterRoleBinding
 metadata:
-  name: {{ include "argo-cd.repoServer.fullname" . }}:custom
+  name: {{ include "argo-cd.repoServer.fullname" . }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.repoServer.name "name" .Values.repoServer.name) | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: {{ ternary "ClusterRole" "Role" .Values.rbac.clusterAdmin }}
-  name: {{ include "argo-cd.repoServer.fullname" . }}:custom
+  kind: ClusterRole
+  name: {{ include "argo-cd.repoServer.fullname" . }}
 subjects:
 - kind: ServiceAccount
   name: {{ include "argo-cd.repoServer.serviceAccountName" . }}
